@@ -1,4 +1,5 @@
 2.0b3:
+	rc-redhat.sh: move PID file somewhere we can write (Petr Kristof)
 	Fix build problem with spf
 	Fix bad DESTDIR specification for /etc/mail
 	Change e-mail matching scheme to exact match instead of substring match
